--- a/client/src/components/CheckoutForm/CheckoutForm.css
+++ b/client/src/components/CheckoutForm/CheckoutForm.css
@@ -8,6 +8,38 @@
   margin-bottom: 1.2rem;
 }
 
+.form-order .voucher-list {
+  margin-bottom: 1rem;
+}
+
+.form-order .voucher-list .voucher-item {
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 10px;
+  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 5px;
+  width: 60%;
+  min-width: 330px;
+}
+
+.form-order .voucher-list .voucher-item .left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.form-order .voucher-list .voucher-item .right .copy {
+  cursor: pointer;
+  padding: 10px;
+}
+
 @media (max-width: 1080px) {
   .form-order {
     width: 100%;
