--- a/client/src/pages/Product/Product.css
+++ b/client/src/pages/Product/Product.css
@@ -2,6 +2,12 @@
   padding-top: 65px;
 }
 
+.product .swiper-pagination-bullet {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 10px;
+  height: 10px;
+}
+
 @media (max-width: 1006px) {
   .product {
     padding-top: 56px;
