--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -122,6 +122,8 @@ section.header {
         left: 0;
         right: 0;
         background: white;
+        max-height: 40vh;
+        overflow-y: scroll;
         div {
           padding: 0 16px;
           padding-bottom: 10px;
