--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -36,6 +36,24 @@
   margin: 0 40px;
 }
 
+.login .login__body .login__form .googleLoginBtn {
+  color: #000000;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.login .login__body .login__form .googleLoginBtn .googleIcon {
+  margin-right: 10px;
+}
+
 @media (max-width: 1008px) {
   .login .login__body .login__form {
     margin: 0 16px;
