--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -54,6 +54,18 @@
   margin-right: 10px;
 }
 
+.login .login__body .login__form .facebookLoginBtn {
+  cursor: pointer;
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  background-color: #1877f2;
+  color: #ffffff;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+}
+
 @media (max-width: 1008px) {
   .login .login__body .login__form {
     margin: 0 16px;
