--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -34,8 +34,19 @@
         align-items: center;
         justify-content: center;
         .googleIcon {
-            margin-right: 10px;
+          margin-right: 10px;
         }
+      }
+      .facebookLoginBtn {
+        cursor: pointer;
+        width: 100%;
+        height: 40px;
+        font-size: 16px;
+        background-color: rgb(24, 119, 242);
+        color: #ffffff;
+        border-radius: 2px;
+        outline: none;
+        border: none;
       }
       @include contentBlock();
       @media (max-width: 1008px) {
