--- a/client/src/components/BestSeller/BestSeller.css
+++ b/client/src/components/BestSeller/BestSeller.css
@@ -21,8 +21,8 @@
 .best-seller .card {
   width: 100%;
   padding: 5px;
-  -webkit-transition: all .4s;
-  transition: all .4s;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
   cursor: pointer;
 }
 
@@ -34,7 +34,8 @@
           transform: scale(1.1);
 }
 
-.best-seller .card div, .best-seller .card p {
+.best-seller .card div,
+.best-seller .card p {
   text-align: center;
   font-size: 16px;
   color: #000;
