--- a/client/src/pages/Product/Product.css
+++ b/client/src/pages/Product/Product.css
@@ -128,4 +128,58 @@
 .product .descriptionAndComments .ant-tabs-content-holder .ant-comment-content-detail > p {
   font-size: 16px;
 }
+
+.product .recomContainer {
+  max-width: 1200px;
+  margin: 30px auto;
+}
+
+.product .recomContainer .heading {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.product .recomContainer .swiper-container-horizontal > .swiper-pagination-bullets,
+.product .recomContainer .swiper-pagination-custom,
+.product .recomContainer .swiper-pagination-fraction {
+  bottom: 0;
+}
+
+.product .recomContainer .swiper-container {
+  padding-bottom: 50px;
+  overflow: hidden;
+}
+
+.product .recomContainer .card {
+  width: 100%;
+  padding: 5px;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  cursor: pointer;
+}
+
+.product .recomContainer .card:hover {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  z-index: 1;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.product .recomContainer .card div,
+.product .recomContainer .card p {
+  text-align: center;
+  font-size: 16px;
+  color: #000;
+  margin: 0;
+}
+
+.product .recomContainer .card div {
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+.product .recomContainer .card img {
+  width: 100%;
+}
 /*# sourceMappingURL=Product.css.map */
