--- a/client/src/components/CheckoutForm/CheckoutForm.scss
+++ b/client/src/components/CheckoutForm/CheckoutForm.scss
@@ -28,6 +28,30 @@
       }
     }
   }
+  .map-container {
+    height: 300px;
+    margin-bottom: 20px;
+  }
+
+  .mapboxgl-control-container {
+    display: none;
+  }
+
+  .addressDropdown {
+    position: relative;
+    top: -80%;
+    width: 100%;
+    margin-top: -20px;
+    padding: 8px 10px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    .addressItem {
+      line-height: 28px;
+    }
+  }
+
   @media (max-width: 1080px) {
     width: 100%;
     padding: 0;
