--- a/client/src/components/Layouts/UserLayout.css
+++ b/client/src/components/Layouts/UserLayout.css
@@ -1,3 +1,7 @@
+#sc-launcher .sc-launcher {
+  z-index: 99;
+}
+
 #sc-launcher .sc-open-icon,
 #sc-launcher .sc-closed-icon,
 #sc-launcher .sc-launcher {
@@ -5,6 +9,7 @@
 }
 
 #sc-launcher .sc-chat-window {
+  z-index: 99;
   bottom: 156px;
   max-height: 568px;
 }
